swagger being done and stashes applied
